# retrogym

./: .gitignore  .gitmodules  2048.srm  CMakeLists.txt  Makefile  README.md  requirements.txt  setup.py
data/: battle.yaml  pallet_town.yaml  quickstart.yaml  rival_battle.yaml
libretro/: emulator.cpp  emulator.h  grpc_emulator.cc  noarch.cpp  pybind.cpp
protos/: grpc_emulator.proto
runs/1dj8v46c/PPO_1/: events.out.tfevents.1705821374.DESKTOP-OS5NEJ9.84096.0
runs/1qcntzdb/PPO_1/: events.out.tfevents.1705812227.DESKTOP-OS5NEJ9.33291.0
runs/3i93asw4/PPO_1/: events.out.tfevents.1705822324.DESKTOP-OS5NEJ9.90490.0
runs/4upwdibs/PPO_1/: events.out.tfevents.1705811983.DESKTOP-OS5NEJ9.30960.0
runs/5nvi1hcm/PPO_1/: events.out.tfevents.1705809550.DESKTOP-OS5NEJ9.15369.0
runs/ao6a0pxf/PPO_1/: events.out.tfevents.1705811958.DESKTOP-OS5NEJ9.30642.0
runs/aybp3qcc/PPO_1/: events.out.tfevents.1705811690.DESKTOP-OS5NEJ9.28103.0
runs/eq7t8vn2/PPO_1/: events.out.tfevents.1705811516.DESKTOP-OS5NEJ9.26840.0
runs/gt92kdc9/PPO_1/: events.out.tfevents.1705821112.DESKTOP-OS5NEJ9.82156.0
runs/i0xghiai/PPO_1/: events.out.tfevents.1705812141.DESKTOP-OS5NEJ9.32511.0
runs/rloy2ydj/PPO_1/: events.out.tfevents.1705821008.DESKTOP-OS5NEJ9.81122.0
runs/u1t4v1e7/PPO_1/: events.out.tfevents.1705821511.DESKTOP-OS5NEJ9.85307.0
runs/wqsgup0g/PPO_1/: events.out.tfevents.1705812251.DESKTOP-OS5NEJ9.33582.0
runs/zegj7u0z/PPO_1/: events.out.tfevents.1705809488.DESKTOP-OS5NEJ9.14706.0
src/: endings.py  env.py  example.py  example_gym.py  example_test.py  example_train.py  grpc_emulator_pb2.py  grpc_emulator_pb2.pyi  grpc_emulator_pb2_grpc.py  lunarlander.py  main.py  models.py  noarch.py  remote_emulator.py  rewards.py  utils.py
states/: ash_room copy.state  charmander_quick.state  charmander_rival_battle.state
